stopped forcing scrollbar as it was no longer necessary

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,6 @@ h1 {
 body {
 	position:relative;
 	clear: both;
-	overflow-y: scroll;
 	background-image: url("../images/intersection.png");
 }
 article {
